www/src/components/DownloadView/style/index.css
.expire-text{
  /* position: absolute;
  left:20px;
  top: 50%; transform: translateY(-50%); */
  font-size:12px;
  color: #50565C;
  font-weight: bold;
  margin-top:22px;
  margin-bottom: 22px;
}

.preview-container {
  position: relative;
  
}

.preview-img{
  opacity: 1;
  display: block;
  transition: .5s ease;
  backface-visibility: hidden;
}

.preview-img:hover {
  opacity: 0.3;
  cursor:zoom-in;
}

.selected {
 opacity: 0.3
}

.card-body-preview {
  position: absolute;
  width:100%;
  background-color: white;
  border-bottom: 1px solid rgb(207, 207, 207);
  border-left: 1px solid rgb(207, 207, 207);
  border-right: 1px solid rgb(207, 207, 207);
  bottom:0;
  cursor: default
}

@media (max-width: 1046px) {
  .card-body-preview {
    display: none!important;
  }

}



.preview-download-img{
  cursor: pointer
}

.preview-btn-right{
  position: absolute;
  right: 20px;
  top: 50%;
  font-size:14px;
  font-weight: bold;
  transform: translate(0, -50%);
}

.preview-btn-left{
  position: absolute;
  left: 20px;
  top: 50%;
  font-size:14px;
  font-weight: bold;
  transform: translate(0, -50%);
}

.preview-btn-right:hover {
  cursor:pointer;
}

.preview-btn-left:hover {
  cursor:pointer;
}

.preview-img-name{
  font-size: 14px;
  font-weight: bold;
  color: #363A3E;
}

.oops-title{
  font-size: 20px;
  font-weight: bolder;
  margin-top: 18px;
  color: #4A4A4A; 
}

.oops-subtitle{
  font-size: 16px;
  color: #4A4A4A;
}

.preview-download-btn{
  margin: 7px 0; 
  font-size: 12px;
  background-color: inherit;
  color: white;
  padding: 2px 10px;
}

.list-container-gallery{
  overflow-y: auto;
}

.preview-download-btn:hover{
  background-color: rgb(61, 108, 139);
  color: white;
}

.btn-slideshow{
  background-color: inherit;
  color: white;
  border: none;
}

.btn-slideshow:active {
  outline: none;
  border: none;
}
  
.btn-slideshow:focus {
  outline:0;
}

@media (max-width: 1046px) {
  .gallery{
    flex-direction: column-reverse;
    align-items: center;
  }
}

.blue-btn-sm{
  color: #6288A9;
  border: 1px solid #6288A9;
  background-color: white;
  border-radius: 6px;
}

.blue-btn-sm:hover{
  background-color: #6288A9;
  color: white;
  outline: none;
}

.preview-upload-name{
  color: #4A4A4A;
  font-size: 16px;
  margin-left: 6px;
  font-weight: bold;
}

